# TetraGBA

./: .editorconfig  .eslintrc.js  .gitignore  CMakeSettings.json  README.md  build-release.sh  launch-m.bat  launch.bat
notes/: irq.md  score.md  vram.md
src/: CMakeLists.txt  CMakeSettings.json
src/app/: Config.hpp  ConfigScene.cpp  ConfigScene.hpp  CopyMap.hpp  CopyVRAM.hpp  DbgPrintf.hpp  DbgWait.hpp  GameConfig.cpp  GameConfig.hpp  GameTetraRestartScene.cpp  GameTetraRestartScene.hpp  GameTetraScene.cpp  GameTetraScene.hpp  Header.cpp  IRQ.cpp  IRQ.hpp  Main.cpp  MergePalette.hpp  RotateEnum.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Song.hpp  Sound.hpp  TilePrint.hpp  TitleScene.cpp  TitleScene.hpp  UpdateFromConfig.cpp  UpdateFromConfig.hpp  Version.hpp
src/app/Signal/: DelaySignalDecorator.cpp  DelaySignalDecorator.hpp  KeyInputSignal.cpp  KeyInputSignal.hpp  KonamiCommandSignal.cpp  KonamiCommandSignal.hpp  OneShotSignalDecorator.cpp  OneShotSignalDecorator.hpp  RepeatSignalDecorator.cpp  RepeatSignalDecorator.hpp  SignalBase.cpp  SignalBase.hpp
src/app/Sound/: MusicManager.cpp  MusicManager.hpp  SoundManager.cpp  SoundManager.hpp  music.md  sound.md
src/app/Tetra/: BaggedMinoFactory.cpp  BaggedMinoFactory.hpp  Config.hpp  GameClearScene.cpp  GameClearScene.hpp  GameEndSceneBase.cpp  GameEndSceneBase.hpp  GameOverScene.cpp  GameOverScene.hpp  GamePauseScene.cpp  GamePauseScene.hpp  GameReadyScene.cpp  GameReadyScene.hpp  GameScene.cpp  GameScene.hpp  Ghost.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  XorShift128.hpp  sound.md
src/app/Tetra/Tetra/: Common.hpp  EventEmitter.hpp  Game.cpp  Game.hpp  Mino.hpp
src/gba/: gba.hpp  gba.ls
src/gba/gba/: address.hpp  bios.cpp  bios.hpp  const.hpp  entrypoint.s  irq.cpp  irq.hpp  lcd.hpp  memory.hpp  pointer.hpp  register.hpp  rgb.hpp  start.cpp  template_pointer.hpp  template_register.hpp  type.cpp  type.hpp
src/gba/gba/const/: dma.hpp  interrupt.hpp  keypad.hpp  lcd.hpp  sound.hpp  system.hpp  timer.hpp
src/gba/gba/generator/: data.js  index.js
src/resources/: .gitignore
src/resources/image/: background_flame.csv  background_gray.csv  background_pronama.csv  block.csv  block.edg  effect.csv  effect.edg  empty64x64.csv  empty64x64.edg  font.edg  fontzx.edg  frame.csv  frame.edg  hextopng.js  index.js  memo.md  package-lock.json  package.json  pause.csv  pause.edg  text.csv  text.edg  texttopng.js  title.csv  title.edg  unscii-16-full.json  unscii-16.json  unscii-8-alt.json  unscii-8-tall.hex  unscii-8-tall.json  unscii-8.csv
src/resources/song/: dadadada.dms  gameover.dms  gameover.mid  gonggyeokjeonida.dms  gonggyeokjeonida.mid  index.js  kimamanatenshitachi.dms  kimamanatenshitachi.mid  note.js  nukitashi2op.dms  package-lock.json  package.json  register.js  symphonic.dms  symphonic2.dms  tetrisa.dms  tetrisa2.dms  tetrisa2.mid  waveram.js
src/resources/sound/: index.js  効果音.csv
